@@ -24,6 +24,12 @@
 		</dependency>
 		-->
 		<dependency>
+			<groupId>nl.jqno.equalsverifier</groupId>
+			<artifactId>equalsverifier</artifactId>
+			<version>3.15.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -34,6 +40,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<!-- Removed for Log4j-->
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +71,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<!--Removed for Log4j-->
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -69,6 +89,31 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version>
+		</dependency>
+		<!-- Log4j -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<!-- CommonEndpointLogging -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.jws</groupId>
+			<artifactId>jakarta.jws-api</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
 
@@ -86,6 +131,69 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.22.2</version>
+	<configuration>
+		<argLine>
+			--illegal-access=permit
+		</argLine>
+		<testFailureIgnore>true</testFailureIgnore>
+		<forkCount>2</forkCount>
+		<reuseForks>true</reuseForks>
+		<argLine>${surefireArgLine}</argLine> 
+	</configuration>
+</plugin>
+
+<plugin>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+	<version>0.8.7</version>
+	<executions>
+		<execution>
+			<id>default-prepare-agent</id>
+			<goals>
+				<goal>prepare-agent</goal>
+			</goals>
+			<configuration>
+				<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
+				<propertyName>surefireArgLine</propertyName>
+			</configuration>
+		</execution>
+		<execution>
+			<id>default-report</id>
+			<phase>test</phase>
+			<goals>
+				<goal>report</goal>
+			</goals>
+			<configuration>
+				<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+				<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+			</configuration>
+		</execution>
+		<execution>
+			<id>default-check</id>
+			<goals>
+				<goal>check</goal>
+			</goals>
+			<configuration>
+				<rules>
+					<rule>
+						<element>BUNDLE</element>
+						<limits>
+							<limit>
+								<counter>COMPLEXITY</counter>
+								<value>COVEREDRATIO</value>
+								<minimum>0.70</minimum>
+							</limit>
+						</limits>
+					</rule>
+				</rules>
+			</configuration>
+		</execution>
+	</executions>
+</plugin>
 		</plugins>
 	</build>
 
